añade cambios en el html

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caesar Cipher</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>hola mundo</h1>
+    </div>
+    <h1>ENIGAPP</h1>
+    <h2>"Crea y descubre el enigma de tus mensajes"</h2>
+    <div>
+      <p>Comienza cifrando tus mensajes que deseas</p>
+
+    </div>
+    <div class="">
+      <p>"Ahora el mensaje esta listo para que lo envies o compartas a alguien, gacias."</p>
+    </div>
+    <div class="">
+
+    </div>
+
     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
