--- a/src/index.html
+++ b/src/index.html
@@ -14,37 +14,43 @@
     <link href="https://fonts.googleapis.com/css?family=Niramit|Poppins|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Niramit|Poppins|Quicksand|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="intro/bootstrap.min.css">
   </head>
   <body>
       <!--encabezado-->
       <header>
-        <div class="encabezado">
-          <h1> <img src="imagenes/incognito1.png">CYBERKEYSAPP</h1>
+        <div class="container-fluid">
+        <div class="col-xs12- col-sm-12 col-md-12">
+          <h2> <img src="imagenes/incognito1.png">Cyberhapp
+            <img src="imagenes/facebook.png" class="image4">
+            <img src="imagenes/twitter.png" class="image4">
+            <img src="imagenes/instagram2.png" class="image4"></h1>
+        </div>
         </div>
       </header>
       <!--seccion de cuerpo-->
-      <section>
-        <div>
+      <section class="main row">
+        <div class="container-fluid">
 
-          <div id="homepage" class="pagina">
+          <div id="homepage" class="pagina col-xs-12 col-sm-12 col-md-12">
             <h1 class="text1">"SIENTETE SEGURO Y PROTEGE TU INFORMACION PERSONAL"</h1>
             <h2 class="text2">Ahora puedes crear contraseñas dificiles de descifrar usando como claves los dezplazamientos de letras para tus cuentas de redes sociales, paginas web, correos electronicos, etc.</h2>
-            <h3 class="text3">
+            <h3 class="text3 col-xs-12 col-sm-12 col-md-7">
               <ul>
                 <li> <img src="imagenes/checked.png" class="image2">  Crear contraseñas dificiles de descifrar protege tu informacion personal.</li>
                 <li> <img src="imagenes/checked.png" class="image2">  Las contraseñas dificiles vita y protege robos informaticos a las cuentas personales.</li>
                 <li> <img src="imagenes/checked.png" class="image2">  Tener diferentes contraseñas evitas que puedan hackear todas tus cuentas personales.</li>
               </ul>
             </h3>
-          <div class="caja-btn">
+          <div class="caja-btn col-xs-12 col-sm-12 col-md-5">
             <input type="button" id="cifrar" class="btn1" value="Cifrar">
             <input type="button" id="descifrar" class="btn1" value="Descifrar">
           </div>
         </div>
 
-        <div id="page-cipher" class="pagina">
+        <div id="page-cipher" class="pagina col-xs-12 col-sm-12 col-md-8">
           <p>Ahora podras crear cifrando tus contraseñas y/o mensajes para tus diferentes cuentas, correos, paginas, usando un offset(desplazamiento) como clave de recorrido.</p>
-          <form class="form1">
+          <form class="form1 col-xs-12 col-sm-8 col-md-8">
             <ul>
               <li>
                 <label for="cambios">Dezplazamiento: </label>
@@ -52,10 +58,10 @@
               </li>
               <li>
                 <label for="texto">Mensaje: </label>
-                <textarea type="text" id="texto" class="cuadro1" rows="8" cols="80" placeholder="Ingrese el mensaje y/o contraseña" required></textarea>
+                <textarea type="text" id="texto" class="cuadro1 col-xs-12 col-sm-8 col-md-8" rows="8" cols="80" placeholder="Ingrese el mensaje y/o contraseña" required></textarea>
               </li>
             </ul>
-            <div class="btn2">
+            <div class="btn2 col-xs-12 col-sm-8 col-md-8">
               <button type="button" name="button" id="next" class="btn1">Siguiente</button>
               <button type="button" name="button" id="prueba" class="btn1">Limpiar</button>
             </div>
@@ -63,25 +69,25 @@
           </form>
         </div>
 
-        <div id="answer-cipher" class="pagina">
-          <p>Ahora puedes usar este mensaje cifrado para tus cuentas personales y asi poder evitar cualquier intento de robo cybernetico.</p>
-          <form class="form1">
+        <div id="answer-cipher" class="pagina col-xs-12 col-sm-12 col-md-12">
+          <p class="col-xs-12 col-sm-12 col-md-12">Ahora puedes usar este mensaje cifrado para tus cuentas personales y asi poder evitar cualquier intento de robo cybernetico.</p>
+          <form class="form1 col-xs-12 col-sm-12 col-md-12">
             <ul>
               <li>
                 <label for="result-message">Resultado: </label>
-                <textarea type="text" id="result-message" class="cuadro1" rows="8" cols="80" style="width:40em; height:15em"></textarea>
+                <textarea type="text" id="result-message" class="cuadro1 col-xs-12 col-sm-8 col-md-8" rows="8" cols="80" style="width:40em; height:15em"></textarea>
               </li>
             </ul>
-            <div class="btn2">
+            <div class="btn2 col-xs-12 col-sm-12 col-md-12">
               <button type="button" name="button" id="next-end" class="btn1">Volver</button>
             </div>
 
           </form>
         </div>
 
-        <div id="page-decipher" class="pagina">
-          <p>Podras comenzar descifrando tus mensajes y/o contraseñas usando un offset(dezplazamiento) ya utilizado al inicio de crear tus contraseñas.</p>
-          <form class="form1">
+        <div id="page-decipher" class="pagina col-xs-12 col-sm-12 col-md-12">
+          <p class="col-xs-12 col-sm-12 col-md-12">Podras comenzar descifrando tus mensajes y/o contraseñas usando un offset(dezplazamiento) ya utilizado al inicio de crear tus contraseñas.</p>
+          <form class="form1 col-xs-12 col-sm-12 col-md-12">
             <ul>
               <li>
                 <label for="cambios-second">Dezplazamiento: </label>
@@ -89,26 +95,26 @@
               </li>
               <li>
                 <label for="texto-second">Mensaje: </label>
-                <textarea type="text" id="texto-second" class="cuadro1" rows="8" cols="80" style="width:40em; height:15em" placeholder="Ingrese el mensaje y/o contraseña" required></textarea>
+                <textarea type="text" id="texto-second" class="cuadro1 col-xs-12 col-sm-8 col-md-8" rows="8" cols="80" style="width:40em; height:15em" placeholder="Ingrese el mensaje y/o contraseña" required></textarea>
               </li>
             </ul>
-            <div class="btn2">
+            <div class="btn2 col-xs-12 col-sm-8 col-md-8">
               <button type="button" name="button" id="next-second" class="btn1">Siguiente</button>
               <button type="button" name="button" id="prueba2" class="btn1">Limpiar</button>
             </div>
           </form>
         </div>
 
-        <div id="answer-decipher" class="pagina">
+        <div id="answer-decipher" class="pagina col-xs-12 col-sm-12 col-md-12">
           <p>Ahora puedes saber tu contraseña descirada por si lo llegaste a olvidar.</p>
-          <form class="form1">
+          <form class="form1 col-xs-12 col-sm-12 col-md-12">
             <ul>
               <li>
                 <label for="result-second">Respuesta: </label>
-                <textarea type="text" id="result-second" class="cuadro1" rows="8" cols="80" style="width:40em; height:15em"></textarea>
+                <textarea type="text" id="result-second" class="cuadro1 col-xs-12 col-sm-8 col-md-8" rows="8" cols="80" style="width:40em; height:15em"></textarea>
               </li>
             </ul>
-            <div class="btn2">
+            <div class="btn2 col-xs-12 col-sm-8 col-md-8">
               <button type="button" name="button" id="next-end-second" class="btn1">VOLVER</button>
             </div>
           </form>
