cambios finales de proyecto

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,26 +9,18 @@
     <link rel="stylesheet" href="fontello.css">
     <link rel="stylesheet" href="https://www.flaticon.com/search?word=message">
     <link rel="stylesheet" href="https://fonts.google.com/">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Niramit|Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Niramit|Poppins|Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Niramit|Poppins|Quicksand|Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=ABeeZee|Carrois+Gothic+SC|Didact+Gothic|Magra:700|Quattrocento+Sans|Tauri'">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Noto+Sans+TC" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Noto+Sans+TC|Quicksand" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="intro/bootstrap.min.css">
   </head>
   <body>
       <!--encabezado-->
       <header>
         <div class="container-fluid">
-          <h1><img src="imagenes/incognito1.png">Cyberhapp</h1>
+          <h1><img src="imagenes/incognito1.png" alt="logotipo de la pagina">Cyberhapp</h1>
           <div class="icons">
-            <img src="imagenes/pinterest.png" class="image">
-            <img src="imagenes/twitter.png" class="image">
-            <img src="imagenes/instagram.png" class="image">
-            <img src="imagenes/facebook.png" class="image">
+            <img src="imagenes/pinterest.png" alt="logotipo de pinterest" class="image">
+            <img src="imagenes/twitter.png" alt="logotipo de twitter" class="image">
+            <img src="imagenes/instagram.png" alt="logotipo de instagram" class="image">
+            <img src="imagenes/facebook.png" alt="logotipo de facebook" class="image">
           </div>
         </div>
 
@@ -42,19 +34,25 @@
         </div>
         <div id="homepage-second">
           <article class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
-            <h1><img src="imagenes/escudo (1).png" class="image2"></h1>
+            <img src="imagenes/escudo.png" alt="icono de escudo de seguridad" class="image2">
+            <h3>Seguridad</h3>
             <p> Crear contraseñas dificiles de descifrar protege tu informacion personal.</p>
           </article>
           <article class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
-            <h1><img src="imagenes/bloqueado.png" class="image2"></h1>
+            <img src="imagenes/bloqueado.png" alt="icono de una nube segura" class="image2">
+            <h3>Proteccion</h3>
             <p>Las contraseñas dificiles evita y protege robos informaticos a las cuentas personales.</p>
           </article>
           <article class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
-            <h1><img src="imagenes/anonimato.png" class="image2"></h1>
+            <img src="imagenes/anonimato.png" alt="icono de cuentas personales" class="image2">
+            <h3>Diversidad</h3>
             <p>Tener diferentes contraseñas evitas que puedan hackear todas tus cuentas personales.</p>
           </article>
         </div>
         <div id ="box-btn1" class="box-btn" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <div class="">
+
+          </div>
           <div>
             <p>AHORA CREA Y DESCUBRE CONTRASEÑAS DIFICILES DE HACKEAR</p>
           </div>
